fixes #9634: turn off overflow-y when the navbar is re-expanded into horizontal mode

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -78,6 +78,10 @@
       padding-bottom: 0; // Override default setting
       overflow: visible !important;
     }
+
+    &.in {
+      overflow-y: visible;
+    }
   }
 }
 
